@@ -16,6 +16,8 @@ XXX
      with end-users whose usernames are more than 32 characters long.
    - Fixed parsing of LDAP URLs so that non %s format elements are
      ignored. Perviously they caused the URL to be treated as invalid.
+   - Fixed ODBC module so that it should no longer segmentation fault
+     when trying to do a query.
 
 ----------------------------------------------------------------------
 
